# cuda-he-segmentor

./: .gitignore  CMakeLists.txt  README.md  main.cu
